--- a/templates/login.html
+++ b/templates/login.html
@@ -4,9 +4,10 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="../styles/style-login.css">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
     <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link href="https://fonts.googleapis.com/css2?family=Open+Sans+Condensed:wght@700&display=swap" rel="stylesheet">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Rowdies:wght@300&display=swap" rel="stylesheet">
     <script src="https://unpkg.com/@webcomponents/webcomponentsjs@2.1.3/webcomponents-loader.js"></script>
@@ -15,22 +16,24 @@
     <script src="https://unpkg.com/fullscreen-polyfill@1.0.2/dist/fullscreen.polyfill.js"></script>
     <script src="https://unpkg.com/@magicleap/prismatic/prismatic.min.js"></script>
     <script src="https://unpkg.com/focus-visible@5.0.2/dist/focus-visible.js" defer></script>
-    <title>Document</title>
+    <title>Login-QARD   </title>
+    <link rel="shortcut icon" href="../img/LOGO QUARD 2.ico">
 </head>
 <body>
-    <ul class="nav justify-content-center">
-        <img src="img/a3d81c7da26fe6516948feeab044c505.png" width="55" class="content-start">
-        <li class="nav-item">
+        <ul class="nav justify-content-start">
+            <img src="../img/LOGO QARD 3.png" width="120px" class="logito">
+        <ul class="nav justify-content-center">
+        <li class="nav-item ">
           <a class="nav-link active text-success" aria-current="page" href="#">Home</a>
         </li>
-        <li class="nav-item">
+        <li class="nav-item ">
           <a class="nav-link text-success" href="#">QARD-Info</a>
         </li>
-        <li class="nav-item">
-          <a class="nav-link text-success" href="#">Team</a>
+        <li class="nav-item justify-content-center">
+          <a class="nav-link text-success href="#">Team</a>
         </li>
-        <li class="nav-item">
-          <a class="nav-link disabled" href="#" tabindex="-1" aria-disabled="true">Next...</a>
+        <li class="nav-item ">
+          <a class="nav-link disabled text-center" href="#" tabindex="-1" aria-disabled="true">Next...</a>
         </li>
       </ul>
     <div class="container">
@@ -41,21 +44,21 @@
                 <h1 class="fw-bold text-center pt-5 mb-5"><u>Welcome to QARD</u></h1>
                 <form action="#">
                     <div class="mb-4">
-                        <label for="Email" class="form-label text-light">Email:</label>
+                        <label for="Email" class="form-label">Email:</label>
                         <input type="email" class="form-control" name="email">
                     </div>
                     <div class="mb-4">
-                        <label for="password" class="form-label text-light">Password:</label>
+                        <label for="password" class="form-label ">Password:</label>
                         <input type="password" class="form-control" name="email">
                     </div>
                     <div class="mb-4 form-check">
                         <input type="checkbox" name="connected" class="form-check-input">
-                        <label for="connected" class="form-check-label text-light">Remember me</label>
+                        <label for="connected" class="form-check-label ">Remember me</label>
                     </div>
                     <div class="d-grid">
                         <button type="submit" class="btn btn-success">Login</button>
                     </div>
-                    <span class="text-light">¿You do not have an account? <a href="#" class="text-primary">Sign up here</a></span>
+                    <span class="">¿You do not have an account? <a href="#" class="text-primary">Sign up here</a></span>
                 </form>
                 <div class="logins">
                     <a href="#"><img src="img/linkedin.png" width="40px" alt="" ></a>
@@ -63,7 +66,7 @@
                 </div>
             </div>
             <div class="col st">
-                <img src="img/ID Card-bro.png" alt="" class="img">
+                <img src="../img/ID Card-bro.png" alt="" class="img">
                 </div>
             </div>
         </div>
