--- a/styles/style-index.css
+++ b/styles/style-index.css
@@ -1,15 +1,71 @@
 *{
-    margin: 0%;
+    margin: 0;
     padding: 0;
+    box-sizing: border-box;
 }
+body{
+    font-family: 'Rowdies', cursive;
+}
+
 .hd{
-    padding-right: 30px;
+    padding-right: 50px;
 }
-.crsl{
-    width: 500px;
-    height: 500px;
+section{
+    height: 650px;
+    display: flex;
+    justify-content: space-evenly;
+    padding: 0 40px;
+    align-items: center;
+    border-bottom: 1px black solid;
+    border-top: 1px black solid;
 }
-.preheader{
-    height: 20px;
-    background-color:skyblue;
+section h2{
+    font-size: 50px;
+    font-weight: 700;
+    margin-bottom: 5px;
+}
+section p{
+    font-weight: 400;
+    margin-bottom: 15px;
+}
+section img{
+    height: 60%;
+}
+section a{
+    display: inline-block;
+    padding: 7px 0;
+    color: #283763;
+    text-decoration: none;
+    width: 100px;
+    text-align: center;
+    border: 1px solid;
+    border-radius: 50px;
+    background-color: white;
+}
+section:nth-child(1){
+    background-image: linear-gradient(-225deg, #FFE29F 0%, #FFA99F 48%, #FF719A 100%);}
+section:nth-child(2){
+    background-image: linear-gradient(-225deg, #5D9FFF 0%, #B8DCFF 48%, #6BBBFF 100%);}
+section:nth-child(3){
+    background-image: linear-gradient(15deg, #13547a 0%, #80d0c7 100%);
+}
+html{
+    scroll-behavior: smooth;
+}
+
+@media screen and (max-width:1000px){
+    section{
+        flex-direction: column-reverse;
+    }
+    section > img {
+        height: 40%;
+    }
+    .texto{
+        text-align: center;
+    }
+}
+@media screen and (max-width:600px){
+    section > img {
+        height: 30%;
+    }
 }
