--- a/templates/index.html
+++ b/templates/index.html
@@ -4,97 +4,44 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Document</title>
+  <title>QARD - Home Page</title>
   <link rel="stylesheet" href="../styles/style-index.css">
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Roboto+Serif:ital,wght@0,500;0,600;0,700;1,100&family=Rowdies:wght@300;400;700&display=swap" rel="stylesheet">
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
+  <link rel="shortcut icon" href="../img/LOGO QUARD 2.ico">
 </head>
 <body>
   <!-- Header -->
-  <nav class="navbar navbar-expand-lg navbar-light bg-light">
-    <div class="container-fluid">
-      <img src="../img/LOGO QARD 3.png" height="60px" alt="" class="hd">
-      <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-        <span class="navbar-toggler-icon"></span>
-      </button>
-      <div class="collapse navbar-collapse" id="navbarSupportedContent">
-        <ul class="navbar-nav me-auto mb-2 mb-lg-0">
-          <li class="nav-item">
-            <a class="nav-link active" aria-current="page" href="#">Home</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" href="#">Link</a>
-          </li>
-          <li class="nav-item dropdown">
-            <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
-              Dropdown
-            </a>
-            <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
-              <li><a class="dropdown-item" href="#">Action</a></li>
-              <li><a class="dropdown-item" href="#">Another action</a></li>
-              <li><hr class="dropdown-divider"></li>
-              <li><a class="dropdown-item" href="#">Something else here</a></li>
-            </ul>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link disabled">Disabled</a>
-          </li>
-        </ul>
-        <form class="d-flex">
-          <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
-          <button class="btn btn-outline-success" type="submit">Search</button>
-        </form>
-      </div>
+  <!-- Fin header -->
+  <!-- Pre sections -->
+  <section id="sec1">
+    <div class="texto">
+      <h2>Welcome To QARD!</h2>
+      <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Dolores, consequuntur id! Fuga quaerat minus dolorem officia, aliquam nam hic ex odit illum molestias totam delectus aut nisi iusto blanditiis reiciendis?</p>
+      <a href="#sec2">Section 2</a>
     </div>
-  </nav>
-  <!-- Fin Header -->
-  <!-- Pre HEADER -->
-
-  <div class="preheader">
-    
-  </div>
-
-
+    <img src="../img/cohete.png" alt="">
+  </section>
+  <section id="sec2">
+    <div class="texto">
+      <h2>Section 2</h2>
+      <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Dolores, consequuntur id! Fuga quaerat minus dolorem officia, aliquam nam hic ex odit illum molestias totam delectus aut nisi iusto blanditiis reiciendis?</p>
+      <a href="#sec3">Section 3</a>
+    </div>
+    <img src="../img/tecnol.png" alt="">
+  </section>
+  <section id="sec3">
+    <div class="texto">
+      <h2>Section 3</h2>
+      <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Dolores, consequuntur id! Fuga quaerat minus dolorem officia, aliquam nam hic ex odit illum molestias totam delectus aut nisi iusto blanditiis reiciendis?</p>
+      <a href="#sec1">Section 1</a>
+    </div>
+    <img src="../img/teamwk.jpg" alt="">
+  </section>
   <!-- Fin Preheader -->
   <!-- Carrousel -->
-
-  <div id="carouselExampleCaptions" class="carousel slide" data-bs-ride="carousel">
-    <div class="carousel-indicators">
-      <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
-      <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="1" aria-label="Slide 2"></button>
-      <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="2" aria-label="Slide 3"></button>
-    </div>
-    <div class="carousel-inner">
-      <div class="carousel-item active">
-        <img src="../img/montevideo_grande.jpg" class="d-block w-100 crsl" alt="...">
-        <div class="carousel-caption d-none d-md-block">
-          <h5>First slide label</h5>
-          <p>Some representative placeholder content for the first slide.</p>
-        </div>
-      </div>
-      <div class="carousel-item">
-        <img src="../img/city-g8c84c9b51_1920.jpg" class="d-block w-100 crsl" alt="...">
-        <div class="carousel-caption d-none d-md-block">
-          <h5>Second slide label</h5>
-          <p>Some representative placeholder content for the second slide.</p>
-        </div>
-      </div>
-      <div class="carousel-item">
-        <img src="../img/city-g8c84c9b51_1920.jpg" class="d-block w-100 crsl" alt="...">
-        <div class="carousel-caption d-none d-md-block">
-          <h5>Third slide label</h5>
-          <p>Some representative placeholder content for the third slide.</p>
-        </div>
-      </div>
-    </div>
-    <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide="prev">
-      <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-      <span class="visually-hidden">Previous</span>
-    </button>
-    <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide="next">
-      <span class="carousel-control-next-icon" aria-hidden="true"></span>
-      <span class="visually-hidden">Next</span>
-    </button>
-  </div>
 <!-- Fin Carrousel -->
 <!-- Script Bootstrap -->
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
