--- a/styles/style-index.css
+++ b/styles/style-index.css
@@ -3,10 +3,19 @@
     padding: 0;
     box-sizing: border-box;
 }
+.loader {
+    position: fixed;
+    left: 0px;
+    top: 0px;
+    width: 100%;
+    height: 100%;
+    z-index: 9999;
+    background: url('../img/loader.gif') 50% 50% no-repeat rgb(249,249,249);
+    opacity: .8;
+}
 body{
     font-family: 'Rowdies', cursive;
 }
-
 .hd{
     padding-right: 50px;
 }
@@ -14,10 +23,12 @@ section{
     height: 650px;
     display: flex;
     justify-content: space-evenly;
-    padding: 0 40px;
+    padding: 0 30px;
     align-items: center;
     border-bottom: 1px black solid;
     border-top: 1px black solid;
+    transition: all .5s ease;
+    margin-top: -25px;
 }
 section h2{
     font-size: 50px;
@@ -42,11 +53,11 @@ section a{
     border-radius: 50px;
     background-color: white;
 }
-section:nth-child(1){
+section:nth-child(5){
     background-image: linear-gradient(-225deg, #FFE29F 0%, #FFA99F 48%, #FF719A 100%);}
-section:nth-child(2){
+section:nth-child(6){
     background-image: linear-gradient(-225deg, #5D9FFF 0%, #B8DCFF 48%, #6BBBFF 100%);}
-section:nth-child(3){
+section:nth-child(7){
     background-image: linear-gradient(15deg, #13547a 0%, #80d0c7 100%);
 }
 html{
@@ -68,4 +79,94 @@ html{
     section > img {
         height: 30%;
     }
+}
+body{
+    font-family: 'Roboto', sans-serif;
+}
+*{
+    margin: 0;
+    padding: 0;
+    list-style: none;
+    text-decoration: none;
+}
+.sidebar{
+    position: fixed;
+    left: -250%;
+    width: 250px;
+    height: 100%;
+    background: white;
+    transition: all .5s ease;
+    margin-top: -25px;
+    border-right: 2px solid black;
+}
+.sidebar header{
+    font-size: 22px;
+    color: white;
+    text-align: center;
+    line-height: 70px;
+    user-select: none;
+}
+.sidebar ul a{
+    display: block;
+    height: 100%;
+    width: 100%;
+    line-height: 65px;
+    font-size: 20px;
+    color: black;
+    padding-left: 40px;
+    box-sizing: border-box;
+    border-top: 1px solid rgba(255,255,255,.1);
+    border-bottom: 1px solid #865004;
+    transition: .4s;
+}
+ul li:hover a{
+    padding-left: 50px;
+}
+.sidebar ul a img{
+    margin-right: 16px;
+}
+#check{
+    display: none;
+}
+label #btn, label #cancel{
+    position: fixed;
+    cursor: pointer;
+    background-color: #042331;
+    border-radius: 3px;
+}
+label #btn{
+    left: 20px;
+    top: 10px;
+    font-size: 35px;
+    background-color: transparent;
+    padding: 6px 12px;
+}
+label #cancel{
+    z-index: 1111;
+    left: -195px;
+    top: 10px;
+    font-size: 30px;
+    background-color: transparent;
+    padding: 4px 9px;
+    transition: all .5s ease;
+}
+#check:checked ~ .sidebar{
+    left: 0;
+}
+#check:checked ~ label #btn{
+    left: 250px;
+    opacity: 0;
+    pointer-events: none;
+
+}
+#check:checked ~ label #cancel{
+    left: 195px;
+}
+#check:checked ~ section{
+    margin-left: 250px;
+}
+.iconito{
+    background: #777777;
+    border-radius: 60%;
+    border: 2px solid #fe5f10;
 }
