--- a/templates/index.html
+++ b/templates/index.html
@@ -13,7 +13,23 @@
   <link rel="shortcut icon" href="../img/LOGO QUARD 2.ico">
 </head>
 <body>
+  <div class="loader"></div>
   <!-- Header -->
+  <input type="checkbox" id="check">
+  <label for="check">
+      <img src="../img/menu.png" width="50px" id="btn">
+      <img src="../img/cancelar.png" width="50px" id="cancel">
+  </label>
+  <div class="sidebar">
+    <header>QARD - OPTIONS </header>
+      <ul>
+          <li><a href="#"><img src="../img/acceso.png" width="30px" class="iconito">Login</a></li>
+          <li><a href="#"><img src="../img/atencion-al-cliente.png" width="30px" class="iconito">Contact</a></li>
+          <li><a href="#"><img src="../img/team.png" width="30px" class="iconito">QARD - Team </a></li>
+          <li><a href="#"><img src="../img/linkedin.png" width="30px" class="iconito">Linkedin</a></li>
+          <li><a href="#"><img src="../img/silueta-del-logo-de-github-en-un-cuadrado.png" width="30px" class="iconito">Github-Team</a></li>
+        </ul>
+  </div>
   <!-- Fin header -->
   <!-- Pre sections -->
   <section id="sec1">
@@ -45,6 +61,14 @@
 <!-- Fin Carrousel -->
 <!-- Script Bootstrap -->
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
-<!-- Fin Bootstrap -->
+  <!-- Jquery Script -->
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.2.4/jquery.min.js"></script>
+  <!-- Fin Bootstrap -->
+  <!-- Jquery Fin -->
+  <script type="text/javascript">
+    $(window).load(function() {
+        $(".loader").fadeOut("slow");
+    });
+    </script>
 </body>
 </html>
