--- a/templates/index.html
+++ b/templates/index.html
@@ -21,7 +21,7 @@
       <img src="../img/cancelar.png" width="50px" id="cancel">
   </label>
   <div class="sidebar">
-    <header>QARD - OPTIONS </header>
+    <header><img src="../img/WhatsApp Image 2022-02-20 at 15.51.00.jpeg"> </header>
       <ul>
           <li><a href="#"><img src="../img/acceso.png" width="30px" class="iconito">Login</a></li>
           <li><a href="#"><img src="../img/atencion-al-cliente.png" width="30px" class="iconito">Contact</a></li>
