--- a/styles/style-index.css
+++ b/styles/style-index.css
@@ -94,16 +94,17 @@ body{
     left: -250%;
     width: 250px;
     height: 100%;
-    background: white;
+    background: rgb(255, 255, 255);
     transition: all .5s ease;
     margin-top: -25px;
     border-right: 2px solid black;
 }
 .sidebar header{
     font-size: 22px;
-    color: white;
+    color: Black;
     text-align: center;
     line-height: 70px;
+    padding-top: 50px;
     user-select: none;
 }
 .sidebar ul a{
@@ -169,4 +170,10 @@ label #cancel{
     background: #777777;
     border-radius: 60%;
     border: 2px solid #fe5f10;
+}
+.sidebar header img{
+    border: 1px solid black;
+    width: 200px;
+    height: 100%;
+    align-items: center;
 }
