--- a/styles/style-index.css
+++ b/styles/style-index.css
@@ -3,6 +3,10 @@
     padding: 0;
     box-sizing: border-box;
 }
+@media screen and (max-width: 640px) { 
+    .column {
+       width: 50%;
+}}
 .loader {
     position: fixed;
     left: 0px;
@@ -10,7 +14,7 @@
     width: 100%;
     height: 100%;
     z-index: 9999;
-    background: url('../img/loader.gif') 50% 50% no-repeat rgb(249,249,249);
+    background: url('../img/loader.gif') 50% 50% no-repeat  rgb(248, 248, 248);
     opacity: .8;
 }
 body{
@@ -54,9 +58,9 @@ section a{
     background-color: white;
 }
 section:nth-child(5){
-    background-image: linear-gradient(-225deg, #FFE29F 0%, #FFA99F 48%, #FF719A 100%);}
+    background-image: linear-gradient(-225deg, #ffffff 0%, #ffffff 48%, #dfdfdf 100%);}
 section:nth-child(6){
-    background-image: linear-gradient(-225deg, #5D9FFF 0%, #B8DCFF 48%, #6BBBFF 100%);}
+    background-image: linear-gradient(-225deg, #ffffff 0%, #cecece 48%, #ffffff 100%);}
 section:nth-child(7){
     background-image: linear-gradient(15deg, #13547a 0%, #80d0c7 100%);
 }
@@ -94,10 +98,10 @@ body{
     left: -250%;
     width: 250px;
     height: 100%;
-    background: rgb(255, 255, 255);
+    background: rgba(15, 15, 15, 0.082);
     transition: all .5s ease;
     margin-top: -25px;
-    border-right: 2px solid black;
+    border-right: 0px solid black;
 }
 .sidebar header{
     font-size: 22px;
@@ -112,13 +116,15 @@ body{
     height: 100%;
     width: 100%;
     line-height: 65px;
+    text-decoration: none;
     font-size: 20px;
     color: black;
     padding-left: 40px;
     box-sizing: border-box;
     border-top: 1px solid rgba(255,255,255,.1);
-    border-bottom: 1px solid #865004;
+    border-bottom: 1px solid #fafafa;
     transition: .4s;
+    font-family: 'Open Sans Condensed', sans-serif;
 }
 ul li:hover a{
     padding-left: 50px;
@@ -169,11 +175,19 @@ label #cancel{
 .iconito{
     background: #777777;
     border-radius: 60%;
-    border: 2px solid #fe5f10;
+    border: 2px solid #ffffff;
 }
 .sidebar header img{
     border: 1px solid black;
     width: 200px;
     height: 100%;
     align-items: center;
+}
+.bajo{
+    padding-top: 50px;
+}
+.imagensita{
+    margin-top: 50px;
+    height: 100px;
+    width: 250px;
 }
