--- a/styles/style-login.css
+++ b/styles/style-login.css
@@ -1,8 +1,15 @@
+*{
+    list-style: none;
+    text-decoration: none;
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+
+}
 body{
 margin: 0;
 background: linear-gradient(rgb(255, 255, 255) 80%, rgb(133, 131, 131));
 height: 100vh;
-background-size: cover;
 }
 h1{
     font-family: 'Open Sans Condensed', sans-serif;
@@ -19,9 +26,8 @@ h1{
     margin-left: 40px;
 }
 .logito{
-    margin-right: 300px;
-    margin-left: 70px;
-    height: 40px;
+    margin-left: 100px;
+    height: 100px;
     margin-top: 10px;
 }
 .butt{
@@ -37,3 +43,102 @@ h1{
     .column {
        width: 50%;
 }}
+.sidebar{
+    position: fixed;
+    left: -250%;
+    width: 250px;
+    height: 100%;
+    background: rgb(255, 255, 255);
+    transition: all .5s ease;
+    margin-top: -25px;
+    border-right: 2px solid black;
+}
+.sidebar header{
+    font-size: 22px;
+    color: Black;
+    text-align: center;
+    line-height: 70px;
+    padding-top: 50px;
+    user-select: none;
+}
+.sidebar ul a{
+    display: block;
+    height: 100%;
+    width: 100%;
+    line-height: 65px;
+    font-size: 20px;
+    color: black;
+    padding-left: 40px;
+    box-sizing: border-box;
+    border-top: 1px solid rgba(255,255,255,.1);
+    border-bottom: 1px solid #865004;
+    transition: .4s;
+    font-family: 'Open Sans Condensed', sans-serif;
+}
+ul li:hover a{
+    padding-left: 50px;
+}
+.sidebar ul a img{
+    margin-right: 16px;
+}
+#check{
+    display: none;
+}
+label #btn, label #cancel{
+    position: fixed;
+    cursor: pointer;
+    background-color: #042331;
+    border-radius: 3px;
+}
+label #btn{
+    left: 20px;
+    top: 10px;
+    font-size: 35px;
+    background-color: transparent;
+    padding: 6px 12px;
+}
+label #cancel{
+    z-index: 1111;
+    left: -195px;
+    top: 10px;
+    font-size: 30px;
+    background-color: transparent;
+    padding: 4px 9px;
+    transition: all .5s ease;
+}
+#check:checked ~ .sidebar{
+    left: 0;
+}
+#check:checked ~ label #btn{
+    left: 250px;
+    opacity: 0;
+    pointer-events: none;
+
+}
+#check:checked ~ label #cancel{
+    left: 195px;
+}
+#check:checked ~ section{
+    margin-left: 250px;
+}
+.iconito{
+    background: #777777;
+    border-radius: 60%;
+    border: 2px solid #fe5f10;
+}
+.sidebar header img{
+    border: 1px solid black;
+    width: 200px;
+    height: 100%;
+    align-items: center;
+}
+.loader {
+    position: fixed;
+    left: 0px;
+    top: 0px;
+    width: 100%;
+    height: 100%;
+    z-index: 9999;
+    background: url('../img/loader.gif') 50% 50% no-repeat  rgb(249,249,249);
+    opacity: .8;
+}
