--- a/styles/style-menu.css
+++ b/styles/style-menu.css
@@ -1,3 +1,85 @@
+*{
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+}
+.loader {
+    position: fixed;
+    left: 0px;
+    top: 0px;
+    width: 100%;
+    height: 100%;
+    z-index: 9999;
+    background: url('../img/loader.gif') 50% 50% no-repeat rgb(249,249,249);
+    opacity: .8;
+}
+body{
+    font-family: 'Rowdies', cursive;
+}
+.hd{
+    padding-right: 50px;
+}
+section{
+    height: 650px;
+    display: flex;
+    justify-content: space-evenly;
+    padding: 0 30px;
+    align-items: center;
+    border-bottom: 1px black solid;
+    border-top: 1px black solid;
+    transition: all .5s ease;
+    margin-top: -25px;
+}
+section h2{
+    font-size: 50px;
+    font-weight: 700;
+    margin-bottom: 5px;
+}
+section p{
+    font-weight: 400;
+    margin-bottom: 15px;
+}
+section img{
+    height: 60%;
+}
+section a{
+    display: inline-block;
+    padding: 7px 0;
+    color: #283763;
+    text-decoration: none;
+    width: 100px;
+    text-align: center;
+    border: 1px solid;
+    border-radius: 50px;
+    background-color: white;
+}
+section:nth-child(5){
+    background-image: linear-gradient(-225deg, #FFE29F 0%, #FFA99F 48%, #FF719A 100%);}
+section:nth-child(6){
+    background-image: linear-gradient(-225deg, #5D9FFF 0%, #B8DCFF 48%, #6BBBFF 100%);}
+section:nth-child(7){
+    background-image: linear-gradient(15deg, #13547a 0%, #80d0c7 100%);
+}
+html{
+    scroll-behavior: smooth;
+}
+
+@media screen and (max-width:1000px){
+    section{
+        flex-direction: column-reverse;
+    }
+    section > img {
+        height: 40%;
+    }
+    .texto{
+        text-align: center;
+    }
+}
+@media screen and (max-width:600px){
+    section > img {
+        height: 30%;
+    }
+}
 body{
     font-family: 'Roboto', sans-serif;
 }
@@ -12,15 +94,17 @@ body{
     left: -250%;
     width: 250px;
     height: 100%;
-    background: wheat;
+    background: rgb(255, 255, 255);
     transition: all .5s ease;
+    margin-top: -25px;
+    border-right: 2px solid black;
 }
 .sidebar header{
     font-size: 22px;
-    color: white;
+    color: Black;
     text-align: center;
     line-height: 70px;
-    background: rgb(0, 46, 105);
+    padding-top: 50px;
     user-select: none;
 }
 .sidebar ul a{
@@ -29,11 +113,11 @@ body{
     width: 100%;
     line-height: 65px;
     font-size: 20px;
-    color: white;
+    color: black;
     padding-left: 40px;
     box-sizing: border-box;
     border-top: 1px solid rgba(255,255,255,.1);
-    border-bottom: 1px solid black;
+    border-bottom: 1px solid #865004;
     transition: .4s;
 }
 ul li:hover a{
@@ -46,24 +130,24 @@ ul li:hover a{
     display: none;
 }
 label #btn, label #cancel{
-    position: absolute;
+    position: fixed;
     cursor: pointer;
     background-color: #042331;
     border-radius: 3px;
 }
 label #btn{
-    left: 40px;
-    top: 25px;
+    left: 20px;
+    top: 10px;
     font-size: 35px;
-    color: white;
+    background-color: transparent;
     padding: 6px 12px;
 }
 label #cancel{
     z-index: 1111;
     left: -195px;
-    top: 17px;
+    top: 10px;
     font-size: 30px;
-    color: #0a5275;
+    background-color: transparent;
     padding: 4px 9px;
     transition: all .5s ease;
 }
@@ -77,8 +161,19 @@ label #cancel{
 
 }
 #check:checked ~ label #cancel{
-    left: 195px;
+    left: 205px;
 }
 #check:checked ~ section{
     margin-left: 250px;
+}
+.iconito{
+    background: #777777;
+    border-radius: 60%;
+    border: 2px solid #fe5f10;
+}
+.sidebar header img{
+    border: 1px solid black;
+    width: 200px;
+    height: 100%;
+    align-items: center;
 }
