--- a/templates/index.html
+++ b/templates/index.html
@@ -10,6 +10,9 @@
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Roboto+Serif:ital,wght@0,500;0,600;0,700;1,100&family=Rowdies:wght@300;400;700&display=swap" rel="stylesheet">
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Gideon+Roman&family=Open+Sans+Condensed:wght@700&family=Roboto&family=Roboto+Condensed:ital@1&display=swap" rel="stylesheet">
   <link rel="shortcut icon" href="../img/LOGO QUARD 2.ico">
 </head>
 <body>
@@ -23,12 +26,12 @@
   <div class="sidebar">
     <header><img src="../img/WhatsApp Image 2022-02-20 at 15.51.00.jpeg"> </header>
       <ul>
-          <li><a href="#"><img src="../img/acceso.png" width="30px" class="iconito">Login</a></li>
+          <li><a href="../templates/login.html"><img src="../img/acceso.png" width="30px" class="iconito">Your QARD</a></li>
           <li><a href="#"><img src="../img/atencion-al-cliente.png" width="30px" class="iconito">Contact</a></li>
           <li><a href="#"><img src="../img/team.png" width="30px" class="iconito">QARD - Team </a></li>
           <li><a href="#"><img src="../img/linkedin.png" width="30px" class="iconito">Linkedin</a></li>
-          <li><a href="#"><img src="../img/silueta-del-logo-de-github-en-un-cuadrado.png" width="30px" class="iconito">Github-Team</a></li>
-        </ul>
+          <li><a href="https://github.com/FrancoBuenoHolberton/indexv2"><img src="../img/silueta-del-logo-de-github-en-un-cuadrado.png" width="30px" class="iconito">Github-Team</a></li>
+      </ul>
   </div>
   <!-- Fin header -->
   <!-- Pre sections -->
@@ -38,7 +41,7 @@
       <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Dolores, consequuntur id! Fuga quaerat minus dolorem officia, aliquam nam hic ex odit illum molestias totam delectus aut nisi iusto blanditiis reiciendis?</p>
       <a href="#sec2">Section 2</a>
     </div>
-    <img src="../img/cohete.png" alt="">
+    <img src="../img/WhatsApp Image 2022-02-21 at 17.14.25.jpeg" alt="">
   </section>
   <section id="sec2">
     <div class="texto">
