--- a/templates/register.html
+++ b/templates/register.html
@@ -8,6 +8,7 @@
   <title>Formulario Registro</title>
 </head>
 <body>
+  <div class="loader"></div>
     <input type="checkbox" id="check">
     <label for="check">
         <img src="../img/menu.png" width="50px" id="btn">
@@ -24,7 +25,7 @@
           </ul>
       </div>
   <section class="form-register">
-    <h4>Formulario Registro</h4>
+    <img src="../img/LOGO QARD 3.png" class="logo">
     <input class="controls" type="text" name="nombres" id="nombres" placeholder="Ingrese su Nombre">
     <input class="controls" type="text" name="apellidos" id="apellidos" placeholder="Ingrese su Apellido">
     <input class="controls" type="email" name="correo" id="correo" placeholder="Ingrese su Correo">
@@ -33,6 +34,12 @@
     <input class="botons" type="submit" value="Registrar">
     <p><a href="#">¿Ya tengo Cuenta?</a></p>
   </section>
-
+  <!-- apis -->
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.2.4/jquery.min.js"></script>
+  <script type="text/javascript">
+    $(window).load(function() {
+        $(".loader").fadeOut("slow");
+    });
+    </script>
 </body>
 </html>
