--- a/styles/style-register.css
+++ b/styles/style-register.css
@@ -13,7 +13,7 @@
     height: 550px;
     background-image: linear-gradient(180deg, #fbfdff 80%, #ffffffbd 100%);padding: 30px;
     margin: auto;
-    margin-top: 80px;
+    margin-top: 40px;
     border-radius: 4px;
     font-family: 'calibri';
     color: rgb(0, 0, 0);
@@ -58,13 +58,16 @@
   
   .form-register .botons {
     width: 100%;
-    background: #61a34d;
+    background: #106b636e;
     border: none;
     padding: 12px;
     color: white;
     margin: 16px 0;
     border: 1px black solid;
     font-size: 16px;
+  }
+  .form-register .botons:hover{
+    background-color: #37555a;
   }
  /* NEW */
  .sidebar{
@@ -75,7 +78,7 @@
     height: 100%;
     background: rgba(15, 15, 15, 0.082);
     transition: all .5s ease;
-    margin-top: -80px;
+    margin-top: -40px;
     border-right: 0px solid black;
 }
 .sidebar header{
@@ -162,4 +165,35 @@ label #cancel{
     margin-top: 50px;
     height: 100px;
     width: 250px;
+}
+.logo{
+  justify-content: center;
+  margin-left: 150px;
+  margin-top: -10px;
+  width: 200px;
+  margin-bottom: 40px;
+}
+@media screen and (max-width:1000px){
+  .form-register{
+      width: 390px;
+  }
+  .logo{
+    margin-left: 70px;
+  }
+  .form-register p{
+    height: 70px;
+  }
+  .botons{
+    
+  }
+}
+.loader {
+  position: fixed;
+  left: 0px;
+  top: 0px;
+  width: 100%;
+  height: 100%;
+  z-index: 9999;
+  background: url('../img/loader.gif') 50% 50% no-repeat  rgb(248, 248, 248);
+  opacity: .8;
 }
